apps/block_scout_web/assets/css/components/_dashboard-banner.scss
$dashboard-banner-gradient-start: $primary !default;
$dashboard-banner-gradient-end: lighten(
  $dashboard-banner-gradient-start,
  5%
) !default;
$dashboard-banner-network-plain-container-background-color: lighten($dashboard-banner-gradient-end, 5%) !default;
$dashboard-line-color-price: lighten($dashboard-banner-gradient-end, 5%) !default;
$dashboard-line-color-market: $secondary !default;
$dashboard-line-color-transactions: $warning !default;
$dashboard-stats-item-label-color: #fff !default;
$dashboard-stats-item-value-color: rgba(#fff, 0.8) !default;
$dashboard-banner-chart-legend-label-color: #fff !default;
$dashboard-banner-chart-legend-value-color: $dashboard-stats-item-value-color !default;
$dashboard-stats-item-border-color: $primary !default;
$dashboard-banner-network-plain-container-height: 205px;
$dashboard-banner-chart-axis-font-color: $dashboard-stats-item-value-color !default;
$dashboard-banner-chart-axis-font-color-alt: #333;
$banner-logo-height: 9rem !default;
$banner-logo-width: auto !default;

.dashboard-banner-container {
  @include gradient-container();
  margin-bottom: 3rem;
  overflow: hidden;
  padding: 0;
  position: relative;
  // height: 264px;
  height: 200px; // cloudwalk
  @include media-breakpoint-down(sm) {
      height: auto;
  }
  @include media-breakpoint-down(md) {
      height: auto;
  }
}

.dashboard-banner {
  display: flex;
  // justify-content: space-between;
  justify-content: center;
  position: relative;
  z-index: 9;

  @include media-breakpoint-between(lg, xl) {
    // height: 249px;
    height: 200px; // cloudwalk
  }

  @include media-breakpoint-down(sm) {
    flex-direction: column;
  }
}

.dashboard-banner-network-graph {
  display: none; // cloudwalk
  flex-grow: 1;
  padding: 15px 0 0 0;

  @include media-breakpoint-down(md) {
    display: flex;
    flex-direction: column;
    padding-top: 20px;
  }
}

.dashboard-banner-chart {
  flex-grow: 1;
  margin: 15px 0 20px 0;
  max-width: 350px;
  position: relative;
  min-height: 100px;
  height: calc(100% - 86px);

  @include media-breakpoint-down(md) {
    flex-grow: 0;
    margin-top: 20px;
    margin-bottom: auto;
    max-width: 100%;
  }

  > canvas {
    max-height: 100%;
    max-width: 100%;
    width: 100%;
  }
}

.dashboard-banner-chart-legend {
  display: grid;
  grid-template-columns: repeat(var(--numChartData), 0.9fr);
  padding-bottom: 12px;
  padding-left:20px;

  .dashboard-banner-chart-legend-item {
    padding-bottom: 3px;
    padding-left: 12px;
    padding-top: 3px;
    position: relative;
    padding-right: 12px;

    @include media-breakpoint-down(md) {
      display: flex;
      flex-direction: row;
    }

    @media (max-width: 599px) {
      padding-top: 0;
      padding-bottom: 0;
      flex-direction: column;
    }

    &::before {
      border-radius: 2px;
      content: "";
      height: 100%;
      left: 0;
      position: absolute;
      top: 0;
      width: 4px;
    }

    &:nth-child(1)::before {
      background-color: $dashboard-line-color-price;
    }

    &:nth-child(2)::before {
      background-color: $dashboard-line-color-market;
    }

    &:nth-child(3)::before {
        background-color: $dashboard-line-color-transactions;
    }
  }

  .dashboard-banner-chart-legend-label {
    color: $dashboard-banner-chart-legend-label-color;
    display: block;
    font-size: 12px;
    font-weight: 600;
    line-height: 1.2;
    margin: 0 0 5px;

    @media (max-width: 374px) {
      position: relative;
      top: -2px;
    }

    @include media-breakpoint-down(md) {
      margin: 0 5px 0 0;
    }
  }

  .dashboard-banner-chart-legend-value {
    color: $dashboard-banner-chart-legend-value-color;
    display: block;
    font-size: 12px;
    font-weight: normal;
    line-height: 1.2;

    &.inline {
      display: inline-block;
    }
  }

  .dashboard-banner-chart-legend-value-container {
    white-space: nowrap;
  }

  .gas-price-icon {
    position: relative;
    top: -2px;
    path {
      fill: $dashboard-line-color-price;
    }
  }
}

.dashboard-banner-network-plain-container {
  align-items: center;
  align-self: flex-end;
  background-color: $dashboard-banner-network-plain-container-background-color;
  border-top-left-radius: 10px;
  display: flex;
  height: $dashboard-banner-network-plain-container-height;
  justify-content: center;
  // margin: 45px 0 -15px 30px;
  max-width: 100%;
  // padding: 30px 0 30px 60px;
  width: 750px;
  position: relative;
  margin: 0; // cloudwalk
  padding: 0; // cloudwalk

  @include media-breakpoint-down(lg) {
    margin-top: 15px;
    width: 550px;
  }

  @include media-breakpoint-down(md) {
    border-top-right-radius: 10px;
    height: auto;
    justify-content: flex-start;
    margin-left: 0;
    max-width: 100%;
    padding: 20px 0 20px 20px;
    width: 250px;
    box-shadow: 0 0 35px 0 rgba(0, 0, 0, 0.2);
  }

  @include media-breakpoint-down(sm) {
    width: 100%;
  }

  &::after {
    background-color: $dashboard-banner-network-plain-container-background-color;
    bottom: 0;
    content: "";
    // display: block;
    display: none;  // cloudwalk
    height: $dashboard-banner-network-plain-container-height;
    left: 0;
    position: absolute;
    width: 9999px;
    z-index: -1;
    box-shadow: 0 0 35px 0 rgba(0, 0, 0, 0.2);
    border-top-left-radius: 10px;

    @include media-breakpoint-down(md) {
      display: none;
    }
  }
}

.dashboard-banner-network-stats {
  column-gap: 25px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;

  // cloudwalk
  // @include media-breakpoint-down(lg) {
  //   grid-template-columns: 1fr 1fr;
  //   row-gap: 20px;
  // }

  @include media-breakpoint-down(md) {
    grid-template-columns: 1fr;
    row-gap: 20px;
  }

  @include media-breakpoint-down(sm) {
    column-gap: 10px;
    grid-template-columns: 1fr 1fr;
  }

  @include stats-item($dashboard-stats-item-border-color, $dashboard-stats-item-label-color, $dashboard-stats-item-value-color);

  .dashboard-banner-network-stats-item {
    @media (max-width: 374px) {
      padding-left: calc(0.6rem + 4px);
      padding-right: 0.5rem;
    }
  }

  .dashboard-banner-network-stats-value {
    @media (max-width: 374px) {
      font-size: 0.9rem;
    }
  }
}

.banner-logo {
  max-height: $banner-logo-height;
  width: $banner-logo-width;
}

.banner-brand {
  text-decoration: none !important;
}

